@@ -2,4 +2,6 @@
 
 Esse projeto foi desenvolvido como trabalho final da disciplina de Programação Orientada a Objetos da Universidade de São Paulo. O objetivo era recriar o famosos jogo Space Invaders usando a linguagem java.
 
-Foi utlizado a linguagem <b>Java</b> e a biblioteca <b>javafx</b> para a parte gráfica do jogo. Informações detalhadas sobre o projeto podem ser encontradas nos manuais na pasta ```manuais/``` e o código fonte pode ser encontrado na pasta ```spaceinvadersv2/```
+Foi utlizado a linguagem <b>Java</b> e a biblioteca <b>javafx</b> para a parte gráfica do jogo. Informações detalhadas sobre o projeto podem ser encontradas nos manuais na pasta ```manuais/``` e o código fonte pode ser encontrado na pasta ```spaceinvadersv2```
+
+Para rodar, digitar ```java -jar SpaceInvadersV2.jar``` ou ```java -jar --module-path ./lib --add-modules javafx.fxml,javafx.controls SpaceInvadersV2.jar``` na pasta ```SpaceInvaders/dist```
